[gd_scene load_steps=10 format=3 uid="uid://cui0yxsmxis71"]

[ext_resource type="Script" uid="uid://d2cpplwd6ifoe" path="res://scripts/ui/lobby/sp_lobby.gd" id="1_418fn"]
[ext_resource type="WwiseEvent" uid="uid://cf8gacuqqx41t" path="res://Wwise/resources/Event/{1E19996F-F80F-41CF-A16A-4AA69ECDB05A}.tres" id="2_sjg7r"]
[ext_resource type="Texture2D" uid="uid://bsu1o1vymo51p" path="res://assets/aesprite/Domber doki cenario1.png" id="2_yd478"]
[ext_resource type="Shader" uid="uid://c0qwo7bogo6j7" path="res://assets/shaders/blur.gdshader" id="3_t42mu"]
[ext_resource type="PackedScene" uid="uid://cwhum362lt6ww" path="res://scenes/cssmenu/sp_character_select_screen.tscn" id="4_418fn"]
[ext_resource type="PackedScene" uid="uid://mjnlboref67" path="res://scenes/lobby/save_select.tscn" id="4_j0dtp"]
[ext_resource type="PackedScene" uid="uid://dtkyb1rk23fmb" path="res://scenes/lobby/mode_select.tscn" id="5_sjg7r"]
[ext_resource type="PackedScene" uid="uid://cuc5gsxl6umbl" path="res://scenes/ingame_ui/pickup_shop.tscn" id="8_twxis"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m8hcm"]
resource_local_to_scene = true
shader = ExtResource("3_t42mu")
shader_parameter/strength = 2.5

[node name="Lobby" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("1_418fn")
lobby_music = ExtResource("2_sjg7r")

[node name="BG" type="Sprite2D" parent="."]
self_modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture_filter = 1
position = Vector2(576, 337.5)
scale = Vector2(3, 3)
texture = ExtResource("2_yd478")

[node name="BGBlur" type="Panel" parent="."]
material = SubResource("ShaderMaterial_m8hcm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModeSelect" parent="." instance=ExtResource("5_sjg7r")]
layout_mode = 1

[node name="SaveMenu" parent="." instance=ExtResource("4_j0dtp")]
visible = false
layout_mode = 1

[node name="CharacterSelectScreen" parent="." instance=ExtResource("4_418fn")]
visible = false

[node name="PickupShop" parent="." instance=ExtResource("8_twxis")]
layout_mode = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1

[connection signal="enter_boss_rush_mode" from="ModeSelect" to="." method="show_character_select_screen"]
[connection signal="enter_campaign_mode" from="ModeSelect" to="." method="show_save_menu_screen"]
[connection signal="mode_select_back" from="ModeSelect" to="." method="get_back_to_menu"]
[connection signal="save_menu_back" from="SaveMenu" to="." method="show_mode_select_screen"]
[connection signal="save_menu_existing_save" from="SaveMenu" to="." method="_on_game_start"]
[connection signal="save_menu_new_save" from="SaveMenu" to="." method="show_character_select_screen"]
[connection signal="characters_back_pressed" from="CharacterSelectScreen" to="." method="back_from_character_select_screen"]
[connection signal="characters_confirmed" from="CharacterSelectScreen" to="." method="finished_character_select_screen"]
[connection signal="pickup_shop_back" from="PickupShop" to="." method="show_character_select_screen"]
[connection signal="pickup_shop_next" from="PickupShop" to="." method="_on_game_start"]
